# hermes-rainmeter

./: .gitignore  PLAN.md  REFERENCES.md  SPEC.md
hermes-plugin/: __init__.py  adapter.py  plugin.yaml  test_integration.py  ws_server.py
prototype/: SPEC.md  echo_server.py  test_client.html
rainmeter-dll/: HermesRainmeter.sln  README.md
rainmeter-dll-cpp/: CMakeLists.txt  HermesRainmeter.cpp  README.md  RainmeterAPI.h
rainmeter-dll/HermesRainmeter/: HermesRainmeter.csproj  Measure.cs  Plugin.cs  RainmeterAPI.cs  WebSocketClient.cs  packages.config
rainmeter-dll/HermesRainmeter/Properties/: AssemblyInfo.cs
skins/Hermes/: TestSkin.ini
